k8s-docker/istio/istio-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ruoyi-k8s-vs
  namespace: ruoyi-k8s
spec:
  hosts:
    - "ruoyi.com"
#    - "istioruoyi.k8s.jinbaidigits.com"
  gateways:
    - ruoyi-k8s-gateway
#    - mesh
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: web-service
            port:
              number: 80
