k8s-docker/istio/system-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ruoyi-system
  namespace: ruoyi-k8s
spec:
  hosts:
    - "ruoyi-system"
# 只开启v1版本
#  http:
#    - route:
#      - destination:
#          host: ruoyi-system
#          subset: v1

# 开启v1、 v2版本，并切换10%的流量给v2
  http:
    - route:
        - destination:
            host: ruoyi-system
            subset: v1
          weight: 90
        - destination:
            host: ruoyi-system
            subset: v2
          weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ruoyi-system
  namespace: ruoyi-k8s
spec:
  host: ruoyi-system
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
